# django-inbound-rules

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
django_inbound/: admin.py  apps.py  middleware.py  models.py  queries.py  services.py
django_inbound/migrations/: 0001_initial.py
django_inbound_rules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: blank.txt  django-inbound-rule.docx  django-inbound-rule.txt
inbound/: admin.py  middleware.py  models.py  queries.py  services.py
inbound/migrations/: 0001_initial.py
